# LLMFlow

./: .TODO  .coverage  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  NOTICE  README.md  RELEASES.md  conftest.py (if not already at root)  debug_cli_pdb.py  debug_hang_stacktrace.py  debug_runner_flow.py  debug_template.py  debug_with_pdb.py  diff  foo  foo.sh  install.ps1  install.sh  llmflow-language.md  llmflow.spec  passages.json  pyproject.toml  run_tests.py  test_cli_trace.py  test_direct_run.py  test_execution_output.py  test_hang_debug.py  test_hang_trace.py  test_lint_exit.py  test_llm_direct.py  test_llm_library.py  test_log_location_demo.py  test_openai_direct.py  test_pipeline_minimal.py  test_runner_direct.py  test_streams.py  test_verbose_output.py
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  test.yml
data/usfm/: MAT.usfm
docs/: GPT_CONTEXT.md  SBL-2025-semlex-presentation.md  TODO.md  architecture.md  getting-started.md  index.json  index.signatures.json  installing-and-running.md  llmflow-language.md  moderation-handling.md  pipeline-language.md  tutorial.md  why-LLMFlow.md
docs/ai-context/: README.md  data-shapes.md  index.md  overview.md  rules.md
docs/context-pack/: 00-PROJECT-TLDR.md  (+2 more)
inputs/: Psalm23.txt
outputs/: leaders_guide_Psalm_23.json  leaders_guide_Psalm_23.md  scenes_Psalm_23.json
pipelines/: hello-llmflow.yaml  hello.yaml  json-response-openai.yaml  minimal.yaml  semdom-greek-lexicon.yaml  semlex-multipass.yaml  semlex-refactor-plan.md  semlex-singlepass.yaml  storyflow-gospels-combined.yaml  storyflow-gospels.yaml  storyflow-psalms-editing-claude.yaml  storyflow-psalms-editing.yaml  storyflow-psalms-restructure.yaml  storyflow-psalms.yaml  storyflow-test.yaml  storyflow.yaml  storytelling-dictionary.yaml  test-interleave.yaml  visual-commentary.yaml
project/: TODO.md
prompts/: hello.gpt  json-response-check.gpt  leadersguide-bodies-hearts-combined.gpt  reply.gpt  visual-scene-description.gpt
scenes/: Matthew_2_13_23.json  Psalm_1.json  Psalm_23.json  README.md
scripts/: complete_evidence_coverage.py  fix_duplicate_key_attributes.py  fix_output_buffering.py  llmflow.spec  monitor-build.sh
templates/: exegeticalguide_template.md  joshfrost_scene_template.md  joshfrost_template.md  leadersguide_scene_combined_template.md  leadersguide_scene_template.md  leadersguide_template.md  visual_commentary_template.md
tests/: conftest.py  demo_response_content_structure.py  test_after.py  test_append_to_fixed.py  test_append_to_function_steps.py  test_append_to_mechanism.py  test_basex.py  test_cli_file_not_found.py  test_cli_lint.py  test_cli_smoke.py  test_cli_verbose.py  test_condition_on_steps.py  test_conditional.py  test_contract_format_case.py  test_contract_validation_bug.py  test_cost_fallback_gpt5.py  test_critical_error_handling.py  test_critical_foreach_context.py  test_critical_foreach_context_fix.py  test_critical_pipeline_flow.py  test_critical_resolution.py  test_critical_template_flow.py  test_data_flow.py  test_data_utilities.py  test_debug_file_saving.py  test_debug_logging.py  test_debug_logging_verification.py  test_debug_null_resolution.py  test_debug_resolution.py  test_debug_utilities.py  test_execution_output.py  test_extract_variables.py  test_for_each_append.py  test_for_each_append_bug.py  test_for_each_minimal_bug.py  test_foreach_scene_sequence.py  test_function_context_passing.py  test_function_outputs_list.py  test_gpt_invalid_params.py  test_gpt_streaming.py  (+76 more)
tmp/: test_undefined_var.yaml
tools/: index_signatures.py  update_ai_context.py
utils/: io.py
xslt/: annotate-abbott-smith.xslt  expand-abbott-smith-abbreviations.xslt  extract-base-json.xslt
(+124 files in other folders)
