
[project]
name = "llmflow"
version = "0.1.0"
description = "Declarative pipelines for LLM-powered workflows"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
dependencies = ["click", "jinja2", "lxml", "deepdiff"]
readme = "README.md"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["src/llmflow"]

[project.scripts]
llmflow = "llmflow.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
  "pytest"
]
