[project]
name = "llmflow"
version = "0.1.5.04"
description = "Declarative pipelines for LLM-powered workflows"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
dependencies = [
  "click",
  "lxml",
  "deepdiff",
  "pyyaml",
  "httpx",
  "openai",
  "markdown",
  "basexclient",
  "llm",
  "mcp",
  "typer",
  "rich",
  "python-dotenv",
  "pydantic",
  "saxonche",
  "jinja2",
  "jsonschema"
]
readme = "README.md"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["src/llmflow"]

[project.scripts]
llmflow = "llmflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
  "pytest"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]  # Allow imports not at top for special cases
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"