[project]
name = "llmflow"
version = "0.2.1.02"
description = "Declarative pipelines for LLM-powered workflows"
authors = [{name = "Jonathan Robie", email = "jonathan.robie@gmail.com"}]
license = {text = "MIT"}
keywords = ["llm", "ai", "pipeline", "workflow", "nlp", "openai", "anthropic", "gemini"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click",
  "lxml",
  "deepdiff",
  "pyyaml",
  "httpx",
  "openai",
  "markdown",
  "basexclient",
  "llm",
  "mcp",
  "typer",
  "rich",
  "python-dotenv",
  "pydantic",
  "saxonche",
  "jsonschema",
  "mdformat"
]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/nida-institute/LLMFlow"
Repository = "https://github.com/nida-institute/LLMFlow"
Documentation = "https://github.com/nida-institute/LLMFlow/blob/main/README.md"
"Bug Tracker" = "https://github.com/nida-institute/LLMFlow/issues"
Changelog = "https://github.com/nida-institute/LLMFlow/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/llmflow"]

[project.scripts]
sp = "llmflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]  # Allow imports not at top for special cases
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"